Fix page width overflowing on mobile

--- a/assets/scss/components/page.scss
+++ b/assets/scss/components/page.scss
@@ -5,7 +5,7 @@
 
   &__row {
     max-width: constants.$max-width;
-    width: 100%;
+    width: calc(100% - constants.$gutter-width * 2);
 
     padding: 0 constants.$gutter-width;
 
